# home-space

./: .editorconfig  .env.dev  .env.development.local  .gitignore  Cargo.toml  README.md  TODO.md  cert.pem  frontend.go  go.mod  go.sum  key.pem  main.go
api/: router.go
backend/: Directory.Build.props  HomeSpace.Tests.props  HomeSpace.sln  deploy.sh  (+1 more)
client/: .env.development  .eslintrc.cjs  .prettierrc.js  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/js/: file-upload.js
client/src/: app_context.rs  dispatcher.rs  home.rs  main.rs  router.rs
client/src/api/: api_service.rs  fetch-request.ts  mime-types.ts  mod.rs  request-builder.ts  url-resolver.ts
client/src/assets/: base.scss  colors.scss  components.scss  icons.scss  main.scss  variables.scss
client/src/components/configuration/: ConfigurationAction.vue
client/src/components/files/: FilesMain.vue
client/src/components/files/breadcrumbs/: BreadcrumbItem.vue  BreadcrumbsFileNav.vue
client/src/components/files/clipboard/: NodeClipboard.vue
client/src/components/files/dropdown/: NodeDropDown.vue
client/src/components/files/list/: NodeList.vue  NodeListHeader.vue  NodeListRow.vue  node-list-controller.ts
client/src/components/files/list/actions/: FavoriteAction.vue  SelectAction.vue
client/src/components/files/toolbox/: FilesActions.vue
client/src/components/files/toolbox/copy/: CopyAction.vue  copy-stragety.ts
client/src/components/files/toolbox/create/: FilesActionCreate.vue  NewFolderAction.vue  UploadFileAction.vue
client/src/components/header/: LogoutAction.vue  LogoutButton.vue  TopHeader.vue  UserMenu.vue
client/src/components/jobs/: JobInfo.vue  JobsNotification.vue
client/src/components/modal/: ModalDialog.vue
client/src/components/navigation/: LeftNavigation.vue  MenuButton.vue
client/src/di/: app.provide.ts  files.provide.ts
client/src/dto/: display-file-node.ts  file-node-response.ts  paged-result.ts
client/src/errors/: not-authorized-error.ts
client/src/favorites/: favorites_component.rs  mod.rs
client/src/files/: file_actions_component.rs  file_api.rs  file_list_component.rs  file_list_header_component.rs  file_repository.rs  files_view_component.rs  mod.rs  node_actions.rs  node_list.rs  node_list_header.rs  node_row.rs  node_selection.rs  node_state.rs
client/src/files/actions/: create_action_list.rs  create_component.rs  favorite_action.rs  file_actions_component.rs  file_actions_toolbox.rs  file_api.rs  file_system_api.rs  file_upload_component.rs  mod.rs  new_folder_action.rs  new_folder_component.rs  select_action.rs  upload_file_action.rs  upload_file_component.rs
client/src/files/actions/upload/: file_system_api.rs  mod.rs  upload_file_action.rs  upload_file_component.rs
client/src/files/breadcrumbs/: breadcrumbs_component.rs  breadcrumbs_file_navigation.rs  mod.rs
client/src/files/toolbox/: file_action_create.rs  file_actions.rs  mod.rs
client/src/header/: header_component.rs  logout_component.rs  mod.rs
client/src/left_nav/: mod.rs  navigation_component.rs
client/src/modal/: mod.rs  modal_dialog.rs
client/src/models/: file-node.ts  sorting.ts
client/src/recent/: mod.rs  recent_component.rs
client/src/router/: index.ts
client/src/services/: formatter-service.ts  jobs-service.ts
client/src/services/files/: breadcrumbs-service.ts  clipboard-service.ts  file-action-service.ts  file-system-service.ts  files-load-service.ts  upload-file-request-enhancer.ts
client/src/services/user/: user-context.ts  user-service.ts
client/src/shared/: mod.rs  shared_component.rs
client/src/trash/: mod.rs  trash_component.rs
client/src/types/: extensions.d.ts  file-system.d.ts
client/src/user/: login.rs  login_component.rs  mod.rs  register.rs  register_component.rs  secure_component.rs  user_service.rs
client/src/utils/: auth_helpers.rs  context_helpers.rs  dispatcher_helpers.rs  mod.rs
client/src/views/: ConfigurationView.vue  HomeView.vue
client/src/views/auth/: LoginView.vue  RegisterView.vue
client/src/views/home/: AllFiles.vue  FavoriteFiles.vue  JobsView.vue  SharedFiles.vue  TrashFiles.vue
client/styles/: colors.scss  components.scss  file_actions.scss  file_breadcrumbs.scss  file_list.scss  file_upload.scss  header.scss  home.scss  index.scss  left_nav.scss  login.scss  main.scss  material.scss  modal.scss  register.scss
server/: Cargo.toml
server/src/: auth.rs  config.rs  db.rs  main.rs  response.rs  sorting.rs
server/src/files/: copy_service.rs  favorites_controller.rs  favorites_service.rs  file_system.rs  files_controller.rs  files_repository.rs  mod.rs  node_create_service.rs  node_move_service.rs  node_provide_service.rs  paths_manager.rs  service_result.rs  trash_mover.rs  version_service.rs  versions_mover.rs
server/src/files/db/: deleted_node.rs  file_node.rs  file_version.rs  mod.rs
server/src/files/search/: mod.rs  search_query_creator.rs
server/src/ioc/: container.rs
server/src/results/: mod.rs  service_result.rs
server/src/user/: mod.rs  token.rs  user_controller.rs  user_repository.rs
server/src/webdav/: mod.rs
server/src/websocket/: mod.rs  notifications_socket.rs
src/: db.rs  (+2 more)
(+246 files in other folders)
