[package]
name = "home_space_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0.0-rc.3" }
actix-files = { version = "0.6.0-beta.16" }
actix-rt = { version = "2.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2"
deadpool-postgres = { version = "0.10" }
futures-util = { version = "0.3" }
log = "0.4"
log4rs = "1"