[package]
name = "home_space_client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
console_log = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]