#cargo-features = ["per-package-target"]

[package]
name = "home_space_client"
version = "0.1.0"
edition = "2021"
#default-target = "wasm32-unknown-unknown"

[profile.release]
lto = true

[dependencies]
home_space_contracts = { path = "../contracts" }
yew = { git = "https://github.com/yewstack/yew", features = ["tokio"] }
yew-router = { git = "https://github.com/yewstack/yew" }
yew-agent = { git = "https://github.com/yewstack/yew" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-utils = "0.1"
gloo-events = "0.1"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
console_log = "0.2"
base64 = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Storage",
  "DragEvent",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "File"
]