#cargo-features = ["per-package-target"]

[package]
name = "home_space_client"
version = "0.1.0"
edition = "2021"
#default-target = "wasm32-unknown-unknown"

[profile.release]
lto = true

[dependencies]
home_space_contracts = { path = "../contracts" }
yew = { git = "https://github.com/yewstack/yew", features = ["csr", "tokio"] }
yew-router = { git = "https://github.com/yewstack/yew" }
yew-agent = { git = "https://github.com/yewstack/yew" }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
gloo-utils = "0.1.3"
gloo-events = "0.1.2"
serde = "1.0.137"
serde_json = "1.0.81"
log = "0.4.17"
console_log = "0.2.0"
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Storage",
  "DragEvent",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "File"
]
