[package]
name = "home_space_server"
version = "0.1.0"
edition = "2021"
default-run = "home_space_server"

[dependencies]
home_space_contracts = { path = "../contracts" }
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-files = "0.6.0"
actix-web-httpauth = "0.6.0"
actix-rt = "2.7.0"
actix-multipart = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
percent-encoding = "2.1.0"
deadpool-postgres = "0.10.1"
postgres-types = { version = "0.2.2", features = ["with-chrono-0_4"] }
futures-util = "0.3.21"
log = "0.4.14"
log4rs = "1.0.0"
scrypt = "0.10.0"
jsonwebtoken = "8.0.1"
dotenv = "0.15.0"
chrono = "0.4.19"
openssl = "0.10.38"
uuid = { version = "0.8.2", features = ["v4"] }
